--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
 		<button id="order-button"> ORDER HERE </button>
 	</div>
 
+	<div id="eats-scrolling-navigation-container">
+		<div id="eats-scrolling-text">
+			<marquee behavior="scroll" direction="left" scrollamount="10" id="marquee-text"> preorders close Thursday 4/24 and then pick ups are scheduled for Saturday 4/24 </marquee>
+		</div>
+	</div>
+
 </div>
 	
 </div>
