--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 	<div id="eats-scrolling-navigation-container">
 		<div id="eats-scrolling-text">
-			<marquee behavior="scroll" direction="left" scrollamount="10" id="marquee-text"> preorders close Thursday 4/24 and then pick ups are scheduled for Saturday 4/24 </marquee>
+			<marquee behavior="scroll" direction="left" scrollamount="10" id="marquee-text"> all ordered must be submitted by Thursday 4/22 for pick up on Saturday 4/24 </marquee>
 		</div>
 	</div>
 
