--- a/index.html
+++ b/index.html
@@ -37,35 +37,20 @@
 			<div class="eats-slider">
 
 				<div class="eats-sliderimg">
-					<img src="./assets/images/eats-imgs/62F1CD05-B522-4BB7-85F4-32572A62A067-min.JPG">		
+					<img src="./assets/images/eats-imgs/IMG_0785.JPG">		
 				</div>
 				<div class="eats-sliderimg">
-					<img src="./assets/images/eats-imgs/IMG_8389-min.JPG">	
+					<img src="./assets/images/eats-imgs/IMG_0822.JPG">	
 				</div>
 				<div class="eats-sliderimg">
-					<img src="./assets/images/eats-imgs/IMG_8390-min.JPG">			
+					<img src="./assets/images/eats-imgs/IMG_0790.JPG">			
 				</div>
 				<div class="eats-sliderimg">
-					<img src="./assets/images/eats-imgs/IMG_8391-min.JPG">			
+					<img src="./assets/images/eats-imgs/IMG_0837.JPG">			
 				</div>	
 				<div class="eats-sliderimg">
-					<img src="./assets/images/eats-imgs/IMG_8393-min.JPG">	
-				</div>
-				<div class="eats-sliderimg">
-					<img src="./assets/images/eats-imgs/IMG_8394-min.JPG">	
-				</div>
-				<div class="eats-sliderimg">
-					<img src="./assets/images/eats-imgs/IMG_8395-min.JPG">			
-				</div>
-				<div class="eats-sliderimg">
-					<img src="./assets/images/eats-imgs/IMG_8396-min.JPG">		
-				</div>
-				<div class="eats-sliderimg">
-					<img src="./assets/images/eats-imgs/IMG_8397-min.JPG">	
-				</div>	
-				<div class="eats-sliderimg">
-					<img src="./assets/images/eats-imgs/IMG_8399-min.JPG">		
-				</div>																										
+					<img src="./assets/images/eats-imgs/IMG_0840.JPG">	
+				</div>										
 			</div>
 		</div>
 	</div>
@@ -77,13 +62,13 @@
 );
 </script>
 
-	<div id="button-container" onclick=" window.open('https://form.jotform.com/210873791839166','_blank')">
+	<div id="button-container" onclick=" window.open('https://form.jotform.com/211235094437149','_blank')">
 		<button id="order-button"> ORDER HERE </button>
 	</div>
 
 	<div id="eats-scrolling-navigation-container">
 		<div id="eats-scrolling-text">
-			<marquee behavior="scroll" direction="left" scrollamount="10" id="marquee-text"> all ordered must be submitted by Thursday 4/22 for pick up on Saturday 4/24 </marquee>
+			<marquee behavior="scroll" direction="left" scrollamount="10" id="marquee-text"> all orders must be placed by 5/14/2021 to be picked up 5/15/2021 </marquee>
 		</div>
 	</div>
 
