--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 	<div id="eats-scrolling-navigation-container">
 		<div id="eats-scrolling-text">
-			<marquee behavior="scroll" direction="left" scrollamount="10" id="marquee-text"> all orders must be placed by 5/14/2021 to be picked up 5/15/2021 </marquee>
+			<marquee behavior="scroll" direction="left" scrollamount="10" id="marquee-text"> COMING SOON... </marquee>
 		</div>
 	</div>
 
